# wingman

./: .gitignore  Makefile  QUICKSTART.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py
.github/workflows/: build-and-release.yml
scripts/: build.py  version.py
wingman/: __init__.py  cli.py
wingman/commands/: __init__.py  field_extractor.py  pull_reports.py  report_replacer.py
wingman/utils/: __init__.py  salesforce_client.py
